# injury-prediction

./: .env.example  .gitignore  BUGS_QUICK_REFERENCE.md  CLAUDE.md  CODE_ANALYSIS_REPORT.md  COMPREHENSIVE_QA_REPORT.md  EXECUTIVE_SUMMARY.md  FRONTEND_CODE_REVIEW_REPORT.md  QA_BUG_REPORT.md  QA_INDEX.md  QA_TESTING_README.md  README.md  SYNTHETIC_DATA_CODE_REVIEW.md  access_token.txt  athlete-dashboard.txt  athlete_annual_training_plan.csv  athlete_profiles.csv  auth_code.txt  code_analysis_test.py  docker-compose.yml  package-lock.json  pmdata_validation.py  qa_test_suite.py  requirements.txt  synthetic_data.py  synthetic_triathlete_data.csv
Garmin/: access_data.py  oauth.py  process_data.py
backend/: .dockerignore  Dockerfile  athlete_annual_training_plan.parquet  requirements.txt  run.py
docs/: EXPLAINABILITY.md  ROBUSTNESS_LIMITATIONS.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.js
injury-prediction-datagen/: Cargo.toml
injury-prediction-datagen/crates/datagen-cli/: Cargo.toml
injury-prediction-datagen/crates/datagen-cli/src/: main.rs
injury-prediction-datagen/crates/datagen-core/: Cargo.toml
injury-prediction-datagen/crates/datagen-core/src/: config.rs  lib.rs
injury-prediction-datagen/crates/datagen-core/src/activity/: generator.rs  mod.rs  physics.rs  timeseries.rs  types.rs
injury-prediction-datagen/crates/datagen-core/src/athlete/: generator.rs  lifestyle.rs  mod.rs  types.rs  zones.rs
injury-prediction-datagen/crates/datagen-core/src/injury/: mod.rs  probability.rs
injury-prediction-datagen/crates/datagen-core/src/output/: mod.rs  parquet.rs
injury-prediction-datagen/crates/datagen-core/src/physiology/: menstrual.rs  mod.rs  noise.rs
injury-prediction-datagen/crates/datagen-core/src/simulation/: daily.rs  mod.rs  types.rs  year.rs
injury-prediction-datagen/crates/datagen-core/src/training/: metrics.rs  mod.rs  plan.rs  types.rs
notebooks/: 01_eda.ipynb  02_preprocessing_feature_engineering.ipynb  03_ML_analysis.ipynb  03_modeling.ipynb
processed_data/: 2025-01-08_activities.csv  2025-01-08_daily_summaries.csv  2025-01-08_data.csv  2025-01-08_sleep.csv  (+5 more)
(+136 files in other folders)
