[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Injury Prediction Team"]
license = "MIT"

[workspace.dependencies]
# Core
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Numerical
statrs = "0.17"

# Serialization/Output
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress reporting
indicatif = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }
