[package]
name = "datagen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for synthetic triathlete data generation"

[dependencies]
rand.workspace = true
rand_distr.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
chrono.workspace = true
statrs.workspace = true
arrow.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
approx = "0.5"
